# pygdoc

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/pygdoc/: __init__.py  main.py
tests/: test_main.py
