[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygdoc"
version = "0.1.0"
description = "A Python class for managing Google Docs"
authors = [{name = "David Sottimano", email = "dsottimano@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "cachetools==5.5.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.3.2",
    "gdoctableapppy==1.1.0",
    "google-api-core==2.20.0",
    "google-api-python-client==2.147.0",
    "google-auth==2.35.0",
    "google-auth-httplib2==0.2.0",
    "googleapis-common-protos==1.65.0",
    "httplib2==0.22.0",
    "idna==3.10",
    "numpy==2.0.2",
    "pandas==2.2.3",
    "proto-plus==1.24.0",
    "protobuf==5.28.2",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.1",
    "pyparsing==3.1.4",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "requests==2.32.3",
    "rsa==4.9",
    "six==1.16.0",
    "tzdata==2024.2",
    "uritemplate==4.1.1",
    "urllib3==2.2.3",
    "pygdoc==0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/dsottimano/pygdoc"
"Bug Tracker" = "https://github.com/dsottimano/pygdoc/issues"