[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygdoc"
version = "0.1.0"
description = "A Python class for managing Google Docs"
authors = [{name = "David Sottimano", email = "dsottimano@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gdoctableapppy==1.1.0",
    "google-api-core==2.20.0",
    "google-api-python-client==2.147.0",
    "google-auth==2.35.0",
    "google-auth-httplib2==0.2.0",
    "googleapis-common-protos==1.65.0",
    "httplib2==0.22.0",
    "pygdoc==0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/dsottimano/pygdoc"
"Bug Tracker" = "https://github.com/dsottimano/pygdoc/issues"